[gd_scene load_steps=29 format=3 uid="uid://dclp2uugckm4b"]

[ext_resource type="Script" uid="uid://dqybxi6tnbui7" path="res://Scripts/characters/player/player_character.gd" id="1_jp3cw"]
[ext_resource type="Texture2D" uid="uid://c8jxwma7qx5ce" path="res://Placeholders/brackeys_platformer_assets/sprites/knight.png" id="2_07g0c"]
[ext_resource type="Script" uid="uid://doctxwbngvigi" path="res://Scripts/characters/Components/hurtbox_component.gd" id="2_lerqx"]
[ext_resource type="Script" uid="uid://bp16e05ve4uu2" path="res://Scripts/characters/Components/health_component.gd" id="3_lerqx"]
[ext_resource type="Script" uid="uid://v3qd3m565q7r" path="res://Scripts/globals/flippable_sprite.gd" id="5_ecf78"]
[ext_resource type="Script" uid="uid://b5afttnlc2f84" path="res://Scenes/characters/flippable_component.gd" id="5_twm3q"]
[ext_resource type="Script" uid="uid://8tyypbfy61me" path="res://Scripts/characters/Components/hitbox_component.gd" id="7_c3tg1"]

[sub_resource type="Animation" id="Animation_00plc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_lqr2n"]
resource_name = "death"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [56, 57, 58, 59]
}

[sub_resource type="Animation" id="Animation_kxdkh"]
resource_name = "hit"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"ResetHitBool"
}]
}

[sub_resource type="Animation" id="Animation_84hbr"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_f286f"]
resource_name = "roll"
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43, 44, 45, 46, 47, 48]
}

[sub_resource type="Animation" id="Animation_dkaap"]
resource_name = "run"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2xkvl"]
_data = {
&"RESET": SubResource("Animation_00plc"),
&"death": SubResource("Animation_lqr2n"),
&"hit": SubResource("Animation_kxdkh"),
&"idle": SubResource("Animation_84hbr"),
&"roll": SubResource("Animation_f286f"),
&"run": SubResource("Animation_dkaap")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0r5da"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_twm3q"]
animation = &"roll"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fgiwp"]
animation = &"run"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8liwr"]
advance_mode = 2
advance_expression = "current_state==PlayerStates.IDLE"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5cq8p"]
advance_mode = 2
advance_expression = "current_state==PlayerStates.RUNNING"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2si0u"]
advance_mode = 2
advance_expression = "current_state==PlayerStates.DODGING"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2smwd"]
advance_mode = 2
advance_expression = "current_state==PlayerStates.IDLE"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gul8o"]
advance_mode = 2
advance_expression = "current_state==PlayerStates.IDLE"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tf8qx"]
advance_mode = 2
advance_expression = "current_state==PlayerStates.DODGING"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_sc2al"]
advance_mode = 2
advance_expression = "current_state==PlayerStates.RUNNING"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_0r5da"]
states/Start/position = Vector2(158, 105)
states/idle/node = SubResource("AnimationNodeAnimation_0r5da")
states/idle/position = Vector2(321, 100)
states/roll/node = SubResource("AnimationNodeAnimation_twm3q")
states/roll/position = Vector2(566, 127)
states/run/node = SubResource("AnimationNodeAnimation_fgiwp")
states/run/position = Vector2(474, 35)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_8liwr"), "idle", "run", SubResource("AnimationNodeStateMachineTransition_5cq8p"), "run", "roll", SubResource("AnimationNodeStateMachineTransition_2si0u"), "roll", "idle", SubResource("AnimationNodeStateMachineTransition_2smwd"), "run", "idle", SubResource("AnimationNodeStateMachineTransition_gul8o"), "idle", "roll", SubResource("AnimationNodeStateMachineTransition_tf8qx"), "roll", "run", SubResource("AnimationNodeStateMachineTransition_sc2al")]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sq1gg"]
radius = 4.0
height = 22.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mhlov"]
radius = 7.0
height = 20.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_h0m84"]
radius = 5.0
height = 16.0

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("health", "hitbox", "hurtbox", "animation_player") groups=["player"]]
collision_layer = 2
collision_mask = 15
script = ExtResource("1_jp3cw")
health = NodePath("HealthComponent")
hitbox = NodePath("FlippableComponents/HitboxComponent")
hurtbox = NodePath("FlippableComponents/HurtboxComponenent")
animation_player = NodePath("SpriteComponent/AnimationPlayer")
jump_velocity = -200.0

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("3_lerqx")

[node name="SpriteComponent" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="SpriteComponent"]
position = Vector2(0, -4)
texture = ExtResource("2_07g0c")
hframes = 8
vframes = 8
script = ExtResource("5_ecf78")
metadata/_custom_type_script = "uid://v3qd3m565q7r"
metadata/_aseprite_wizard_interface_config_ = {
"layer_section": false,
"pending_changes": {
"embed_tex": true,
"i_mode": 0,
"keep_anim_length": false,
"layers": [],
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"player": "SpriteComponent/AnimationPlayer",
"slice": "",
"source": ""
}
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="SpriteComponent"]
root_node = NodePath("../Sprite2D")
libraries = {
&"": SubResource("AnimationLibrary_2xkvl")
}

[node name="AnimationTree" type="AnimationTree" parent="SpriteComponent"]
root_node = NodePath("../Sprite2D")
tree_root = SubResource("AnimationNodeStateMachine_0r5da")
advance_expression_base_node = NodePath("../..")
anim_player = NodePath("../AnimationPlayer")

[node name="FlippableComponents" type="Node2D" parent="."]
script = ExtResource("5_twm3q")

[node name="HitboxComponent" type="Area2D" parent="FlippableComponents"]
script = ExtResource("7_c3tg1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="FlippableComponents/HitboxComponent"]
position = Vector2(11, -8)
rotation = 0.481346
shape = SubResource("CapsuleShape2D_sq1gg")

[node name="HurtboxComponenent" type="Area2D" parent="FlippableComponents"]
collision_layer = 0
collision_mask = 0
monitorable = false
script = ExtResource("2_lerqx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="FlippableComponents/HurtboxComponenent"]
position = Vector2(0, -2)
shape = SubResource("CapsuleShape2D_mhlov")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_h0m84")
